and this is first change.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My First Project</title>
     <script src="./assets/js/jquery-3.6.4.min.js"></script>
     <script src="./assets/js/debug.js"></script>
     <script src="./assets/js/script.js" defer></script>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>My First Project</h1>
+    </header>
+    <main>
+        <p>This is my first GitHub project.</p>
+    </main>
+    <footer>
+        <address><a href="https://github.com/gyochan96">gyochan96</a></address>
+    </footer>
 </body>
 </html>
